--- a/index.html
+++ b/index.html
@@ -26,5 +26,14 @@
     </div>
 
     <h1>Hello World!</h1>
+
+    <form id="entrada" action="">
+        <input style="text-align:center" inputmode="text" id="a" name="a" placeholder="insira o texto a ser convertido">
+    </br>
+    </br>
+        <input style="text-align:center" type="submit" id="send" value=" Converter ">
+
+    </form>
+
 </body>
 </html>
