--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>Hello World!</h1>
 
     <form id="entrada" action="">
-        <input style="text-align:center" inputmode="text" id="a" name="a" placeholder="insira o texto a ser convertido">
+        <input style="text-align:center" type="text" id="a" name="a" placeholder="insira o texto a ser convertido">
     </br>
     </br>
         <input style="text-align:center" type="submit" id="send" value=" Converter ">
